[package]
name = "blackjack-online"
version = "0.1.0"
authors = ["Cory Aitchison <corytaitchison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.11.0"
stdweb = "0.4.20"

[lib]
name = "bjo"
path = "src/lib.rs"